# apu-micro25-artifact

./: LICENSE  README.md  artifact_evaluation.ipynb  run_all.py
1-bmatmul/: run.py
1-bmatmul/baseline/: device.c  full_output.txt  host.c
1-bmatmul/opt1/: README.md  full_output.txt  host.c
1-bmatmul/opt2/: Makefile  full_output.txt  host.c  profile.sh
1-bmatmul/opt3/: full_output.txt  profile.sh
1-bmatmul/optimized/: Makefile  full_output.txt  gsi_dma.c
2-phoenix/: ablation.json  compile_all.sh  run.py
2-phoenix/histogram/baseline/: full_output.txt  host.c
2-phoenix/histogram/opt1/: device.c  full_output.txt
2-phoenix/histogram/opt2/: full_output.txt
2-phoenix/histogram/opt3/: README.md  full_output.txt  profile.sh
2-phoenix/histogram/opt3/subprojects/gsi-common-meson/common/: meson.build
2-phoenix/histogram/opt3/subprojects/gsi-common-meson/common/products/: gsiasm.s
2-phoenix/histogram/optimized/: device.c  full_output.txt
2-phoenix/histogram/optimized/subprojects/: gsi-common-meson.wrap
2-phoenix/kmeans/baseline/: full_output.txt  gsi_device_profiling.h
2-phoenix/kmeans/opt1/: device.c  full_output.txt  gsi_dma.h
2-phoenix/kmeans/opt2/: full_output.txt
2-phoenix/kmeans/opt3/: device.c  full_output.txt
2-phoenix/kmeans/optimized/: full_output.txt
2-phoenix/linear_regression/baseline/: full_output.txt  host.c
2-phoenix/linear_regression/opt1/: full_output.txt
2-phoenix/linear_regression/opt2/: full_output.txt
2-phoenix/linear_regression/opt3/: full_output.txt
2-phoenix/linear_regression/opt3/subprojects/gsi-common-meson/common/products/wnc-l4/: meson.build
2-phoenix/linear_regression/optimized/: full_output.txt
2-phoenix/matrix_multiply/baseline/: full_output.txt
2-phoenix/matrix_multiply/opt1/: full_output.txt
2-phoenix/matrix_multiply/opt2/: device.c  full_output.txt
2-phoenix/matrix_multiply/opt3/: full_output.txt
2-phoenix/matrix_multiply/optimized/: device.c  full_output.txt
2-phoenix/reverse_index/baseline/: device.c  full_output.txt
2-phoenix/reverse_index/opt1/: device.c  full_output.txt
2-phoenix/reverse_index/opt2/: device.c  full_output.txt
2-phoenix/reverse_index/opt3/: full_output.txt
2-phoenix/reverse_index/optimized/: device.c  full_output.txt  host.c
2-phoenix/string_match/baseline/: full_output.txt  gsi_dma.c
2-phoenix/string_match/opt1/: full_output.txt  struct.h
2-phoenix/string_match/opt2/: device.c  full_output.txt  host.c
2-phoenix/string_match/opt3/: full_output.txt
2-phoenix/string_match/optimized/: device.c  full_output.txt
2-phoenix/word_count/baseline/: device.c  full_output.txt
2-phoenix/word_count/opt1/: full_output.txt  host.c  meson_options.txt
2-phoenix/word_count/opt2/: device.c  full_output.txt
2-phoenix/word_count/opt3/: full_output.txt
2-phoenix/word_count/optimized/: full_output.txt
3-analytical/: histogram.py  kmeans.py  linear_regression.py  matrix_multiply.py  operations.py  reverse_index.py  run.py  string_match.py  word_count.py
4-rag-e2e/: run.py
4-rag-e2e/apu/: device.c  device.c.bak  full_output.txt
4-rag-e2e/apu-opt1/: Makefile  device.c  device.c.bak  full_output.txt  struct.h
4-rag-e2e/apu-opt1/Common/: common.mk
4-rag-e2e/apu-opt1/build-10GB/debug/: rag.mod_3
4-rag-e2e/apu-opt1/build-50GB/debug/: rag.bin_2  rag.mod_1
4-rag-e2e/apu-opt2/: full_output.txt  profile-10GB.sh
4-rag-e2e/apu-opt3/: device.c  full_output.txt
4-rag-e2e/apu-unopt/: device.c  full_output.txt  host.c.bak
4-rag-e2e/hbm-latency/10GB/: l4_to_l1.trace
4-rag-e2e/hbm-latency/10GB-unopt/: config.yaml
4-rag-e2e/hbm-latency/50GB-unopt/: run.sh
5-rag-energy/: apu_energy_breakdown.json  gpu_energy.json  run.py
5-rag-energy/apu_power_profile/static/: cmd.sh  power.txt
5-rag-energy/hbm_energy/: 10GB_trace.csv  200GB_trace.csv  50GB_trace.csv  generate_and_run_mem_traces.sh  generate_memory_trace.py  hbm2e.json  hbm2e_config.json
6-rag-latency-breakdown/: run.py
bmatmul/baseline/: Makefile  full_output.txt  profile.sh
bmatmul/opt1/: Makefile  device.c  full_output.txt  profile.sh
bmatmul/opt2/: README.md  device.c  full_output.txt  struct.h
bmatmul/opt3/: Makefile  device.c  full_output.txt
bmatmul/optimized/: device.c  full_output.txt  host.c  profile.sh
phoenix/: data.json  run.py
phoenix/histogram/baseline/: full_output.txt
phoenix/histogram/opt1/: full_output.txt
phoenix/histogram/opt2/: struct.h
phoenix/histogram/opt3/: device.c  full_output.txt
phoenix/histogram/optimized/: device_lookup.c  full_output.txt
phoenix/kmeans/opt1/: full_output.txt
phoenix/kmeans/opt2/: device.c  struct.h
phoenix/kmeans/opt3/: host.c
phoenix/kmeans/optimized/: device.c  host.c
phoenix/linear_regression/baseline/: device.c
phoenix/linear_regression/opt1/: struct.h
phoenix/linear_regression/opt2/: README.md  device.c  full_output.txt  host.c
phoenix/linear_regression/optimized/: device.c  host.c
phoenix/matrix_multiply/baseline/: device.c  full_output.txt
phoenix/matrix_multiply/opt1/: arc_setup.sh  device.c  full_output.txt  host.c
phoenix/matrix_multiply/opt2/: full_output.txt  struct.h
phoenix/matrix_multiply/opt3/: device.c  full_output.txt
phoenix/matrix_multiply/optimized/: full_output.txt
phoenix/reverse_index/baseline/: full_output.txt
phoenix/reverse_index/opt1/: full_output.txt
phoenix/reverse_index/opt2/: full_output.txt
phoenix/reverse_index/opt3/: full_output.txt
phoenix/string_match/baseline/: device.c  full_output.txt
phoenix/string_match/opt1/: device.c  full_output.txt
phoenix/string_match/opt2/: full_output.txt
phoenix/string_match/optimized/: full_output.txt  meson.build
phoenix/word_count/opt1/: device.c  struct.h
phoenix/word_count/opt2/: full_output.txt
phoenix/word_count/opt3/: device.c
phoenix/word_count/optimized/: device.c
rag-e2e/: compile_all.sh
rag-e2e/apu-opt1/: profile-200GB.sh  profile-50GB.sh
rag-e2e/apu-opt2/: device.c  device.c.bak  full_output.txt
rag-e2e/apu-opt3/: device.c.bak
rag-e2e/apu-unopt/: device.c.bak  host.c
(+56 files in other folders)
